[package]
name = "brdv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.0"
bincode = "1.3.3"
chrono = { version = "0.4.27", features = ["serde"] }
anyhow = "1.0.73"
walkdir = "2.3.2"